# HW_11_WEB_Restapi

./: README.md  main.py  pyproject.toml
migrations/versions/: 791699622969_initial.py  88ad210a0c0f_init.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py
src/routes/: todos.py
src/schemas/: todo.py
